@@ -31,6 +31,7 @@ Changes in SG 1.1
   See http://www.urbanterror.net
 - Added ui_farclip cvar to be used as farclip management facility for UI part
 - Fixed another bad prediction case when cg_boostfps is set, thanks again to Joe Kari for the reporting
+- Fixed old minor OpenGL error which prevented to debug easily FBO enhancement
 
 Changes in SG 1.1b4-20100116
 ******************
